--- a/src/app/vote-page/vote-page.component.html
+++ b/src/app/vote-page/vote-page.component.html
@@ -1,3 +1,25 @@
-<p>
-  vote-page works!
-</p>
+<div>
+  <table id="vote-table" *ngIf="items.length > 0">
+    <tr>
+      <th>{{idColumn}}</th>
+      <th>{{nameColumn}}</th> 
+      <th>{{voteColumn}}</th>
+      <th>{{removeColumn}}</th>
+    </tr>
+    <tr *ngFor="let item of items">
+      <td>{{item.id}}</td>
+      <td>{{item.name}}</td> 
+      <td>
+        <button class="green">Vote Up</button>
+        <button class="red">Vote Down</button>
+      </td>
+      <td>
+        <button class="remove-button" (click)="removeItem(item)">Remove</button>
+      </td>
+    </tr>
+  </table>
+  <div *ngIf="initDone">
+    <input #name id="new-item-name" type="text">
+    <button id="new-item-button" (click)="addItem(name.value)">Add item</button>
+  </div>
+</div>
